force-app/main/default/objects/Quote_and_Order_Request__c/Quote_and_Order_Request__c.object-meta.xml
<CustomObject>
    <label>Quote and Order Request</label>
    <nameField>
        <displayFormat>QR-{00000}</displayFormat>
        <label>Quotation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote and Order Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>