force-app/main/default/objects/Quote_and_Order_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account</label>
    <type>Text</type>
</CustomField>