force-app/main/default/objects/Quote_and_Order_Request__c/fields/Branch_Plant_Header__c.field-meta.xml
<CustomField>
    <fullName>Branch_Plant_Header__c</fullName>
    <label>Branch Plant Header</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch_Plant</valueSetName>
    </valueSet>
</CustomField>