force-app/main/default/objects/Quote_and_Order_Request__c/fields/Branch_Plant_Line__c.field-meta.xml
<CustomField>
    <fullName>Branch_Plant_Line__c</fullName>
    <defaultValue>&quot;99630&quot;</defaultValue>
    <label>Branch Plant Line</label>
    <length>15</length>
    <type>Text</type>
</CustomField>