force-app/main/default/objects/Quote_and_Order_Request__c/fields/BranchPlant_Line__c.field-meta.xml
<CustomField>
    <fullName>BranchPlant_Line__c</fullName>
    <label>Branch Plant Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99630</fullName>
                <default>true</default>
                <label>99630</label>
            </value>
            <value>
                <fullName>99872</fullName>
            </value>
            <value>
                <fullName>99697</fullName>
            </value>
            <value>
                <fullName>99638</fullName>
            </value>
            <value>
                <fullName>99606</fullName>
            </value>
            <value>
                <fullName>99847</fullName>
            </value>
            <value>
                <fullName>99699</fullName>
            </value>
            <value>
                <fullName>99703</fullName>
            </value>
            <value>
                <fullName>99849</fullName>
            </value>
            <value>
                <fullName>99610</fullName>
            </value>
            <value>
                <fullName>99865</fullName>
            </value>
            <value>
                <fullName>99903</fullName>
            </value>
            <value>
                <fullName>99605_UK</fullName>
            </value>
            <value>
                <fullName>99606_Spain</fullName>
            </value>
            <value>
                <fullName>99607_Switerland</fullName>
            </value>
            <value>
                <fullName>99609_US_CWS</fullName>
            </value>
            <value>
                <fullName>99610_US_RC</fullName>
            </value>
            <value>
                <fullName>99625_Italy</fullName>
            </value>
            <value>
                <fullName>99630_France_PSS</fullName>
            </value>
            <value>
                <fullName>99634_US OPTIMA</fullName>
            </value>
            <value>
                <fullName>99634_US_PSS</fullName>
            </value>
            <value>
                <fullName>99638_NL</fullName>
            </value>
            <value>
                <fullName>99639_Austria</fullName>
            </value>
            <value>
                <fullName>99697_France_Demo</fullName>
            </value>
            <value>
                <fullName>99698_Italy_Demo</fullName>
            </value>
            <value>
                <fullName>99699_Spain_Demo</fullName>
            </value>
            <value>
                <fullName>99703_NL_Demo</fullName>
            </value>
            <value>
                <fullName>99705_Switerland_Demo</fullName>
            </value>
            <value>
                <fullName>99706_Austria_Demo</fullName>
            </value>
            <value>
                <fullName>99720_Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>