force-app/main/default/objects/Quote_and_Order_Request__c/fields/Contact2__c.field-meta.xml
<CustomField>
    <fullName>Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote and Order Requests (Contact2)</relationshipLabel>
    <relationshipName>Quote_and_Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>