force-app/main/default/objects/Quote_and_Order_Request__c/fields/Contact3__c.field-meta.xml
<CustomField>
    <fullName>Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote and Order Requests (Contact3)</relationshipLabel>
    <relationshipName>Quote_and_Order_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>