force-app/main/default/objects/Quote_and_Order_Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote and Order Requests</relationshipLabel>
    <relationshipName>Quotation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>