force-app/main/default/objects/Quote_and_Order_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Iberia</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>UKI</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>Gulf</fullName>
            </value>
            <value>
                <fullName>India Subcontinent</fullName>
            </value>
            <value>
                <fullName>Levant, Turkey, Africa</fullName>
            </value>
            <value>
                <fullName>Southern Africa</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>Eastern Europe, CIS</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>