force-app/main/default/objects/Quote_and_Order_Request__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>