force-app/main/default/objects/Quote_and_Order_Request__c/fields/Customer_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Date__c</fullName>
    <label>Customer Request Date</label>
    <type>Date</type>
</CustomField>