force-app/main/default/objects/Quote_and_Order_Request__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>