force-app/main/default/objects/Quote_and_Order_Request__c/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>