force-app/main/default/objects/Quote_and_Order_Request__c/fields/ERP_Order1__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order1__c</fullName>
    <externalId>true</externalId>
    <label>ERP Order#</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>