force-app/main/default/objects/Quote_and_Order_Request__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <inlineHelpText>ERP Order # search format</inlineHelpText>
    <label>ERP Order#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>