force-app/main/default/objects/Quote_and_Order_Request__c/fields/ERP_Quote__c.field-meta.xml
<CustomField>
    <fullName>ERP_Quote__c</fullName>
    <label>ERP Quote#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>