force-app/main/default/objects/Quote_and_Order_Request__c/fields/ERP_Sold_to__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sold_to__c</fullName>
    <label>ERP Sold to #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>