force-app/main/default/objects/Quote_and_Order_Request__c/fields/GPO_Code__c.field-meta.xml
<CustomField>
    <fullName>GPO_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GPO Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote and Order Requests (GPO Code)</relationshipLabel>
    <relationshipName>Quote_and_Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>