force-app/main/default/objects/Quote_and_Order_Request__c/fields/Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Submitter__c</fullName>
    <label>Initial Submitter</label>
    <type>Email</type>
</CustomField>