force-app/main/default/objects/Quote_and_Order_Request__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>IF (ISPICKVAL(Country__c, &apos;France&apos;), &apos;EMEA Mature Markets&apos;,
IF (ISPICKVAL(Country__c, &apos;Benelux&apos;), &apos;EMEA Mature Markets&apos;,
IF (ISPICKVAL(Country__c, &apos;Iberia&apos;), &apos;EMEA Mature Markets&apos;,
IF (ISPICKVAL(Country__c, &apos;Italy&apos;), &apos;EMEA Mature Markets&apos;,
IF (ISPICKVAL(Country__c, &apos;UKI&apos;), &apos;EMEA Mature Markets&apos;,
IF (ISPICKVAL(Country__c, &apos;Nordics&apos;), &apos;EMEA Mature Markets&apos;,
IF (ISPICKVAL(Country__c, &apos;DACH&apos;), &apos;EMEA Mature Markets&apos;,
&apos;EMEA Emerging Markets&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>