force-app/main/default/objects/Quote_and_Order_Request__c/fields/Mobile1__c.field-meta.xml
<CustomField>
    <fullName>Mobile1__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>