force-app/main/default/objects/Quote_and_Order_Request__c/fields/Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Mobile2__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>