force-app/main/default/objects/Quote_and_Order_Request__c/fields/Order_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Completion_Date__c</fullName>
    <label>Order Completion Date</label>
    <type>Date</type>
</CustomField>