force-app/main/default/objects/Quote_and_Order_Request__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>S4</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>SX</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>S6</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>S5</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SZ</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>