force-app/main/default/objects/Quote_and_Order_Request__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>