force-app/main/default/objects/Quote_and_Order_Request__c/fields/Phone3__c.field-meta.xml
<CustomField>
    <fullName>Phone3__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>