force-app/main/default/objects/Quote_and_Order_Request__c/fields/PO_Receiving_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Receiving_Date__c</fullName>
    <label>PO Receiving Date</label>
    <type>Date</type>
</CustomField>