force-app/main/default/objects/Quote_and_Order_Request__c/fields/Price_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Code</label>
    <referenceTo>Q_O_Price_Code__c</referenceTo>
    <relationshipLabel>Quote and Order Requests</relationshipLabel>
    <relationshipName>Quote_and_Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>