force-app/main/default/objects/Quote_and_Order_Request__c/fields/Price_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Code_Description__c</fullName>
    <formula>Price_Code__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Code Description</label>
    <type>Text</type>
</CustomField>