force-app/main/default/objects/Quote_and_Order_Request__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSS HILLROM</fullName>
            </value>
            <value>
                <fullName>PSS LIKO</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>SPARE PARTS</fullName>
            </value>
            <value>
                <fullName>PSS LIKO INSTALLATIONS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>