force-app/main/default/objects/Quote_and_Order_Request__c/fields/Quote_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Completion_Date__c</fullName>
    <label>Quote Completion Date</label>
    <type>Date</type>
</CustomField>