force-app/main/default/objects/Quote_and_Order_Request__c/fields/Reason_codes_Missing_info__c.field-meta.xml
<CustomField>
    <fullName>Reason_codes_Missing_info__c</fullName>
    <description>Created this field as part of CR00029874</description>
    <label>Reason codes - Missing info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote_Discount missing</fullName>
            </value>
            <value>
                <fullName>Quote_Item Reference missing</fullName>
            </value>
            <value>
                <fullName>Quote_Awaiting Tender</fullName>
            </value>
            <value>
                <fullName>Quote_Approval missing</fullName>
            </value>
            <value>
                <fullName>Quote_Contact missing</fullName>
            </value>
            <value>
                <fullName>Quote_Configuration not applicable</fullName>
            </value>
            <value>
                <fullName>Quote_Quantity missing</fullName>
            </value>
            <value>
                <fullName>Quote_Attachment missing</fullName>
            </value>
            <value>
                <fullName>Quote_Installation missing info</fullName>
            </value>
            <value>
                <fullName>Quote_Others</fullName>
            </value>
            <value>
                <fullName>Order_Awaiting account creation (ERP)</fullName>
            </value>
            <value>
                <fullName>Order_Customer PO missing</fullName>
            </value>
            <value>
                <fullName>Order_Product pricing - clarification</fullName>
            </value>
            <value>
                <fullName>Order_Tax Pricing - clarification</fullName>
            </value>
            <value>
                <fullName>Order_Configuration info missing</fullName>
            </value>
            <value>
                <fullName>Order_Awaiting PRS creation</fullName>
            </value>
            <value>
                <fullName>Order_Awaiting Recalculation</fullName>
            </value>
            <value>
                <fullName>Order_Installation missing info</fullName>
            </value>
            <value>
                <fullName>Order_Others</fullName>
            </value>
            <value>
                <fullName>Quote_Missing Freight quotation</fullName>
            </value>
            <value>
                <fullName>Order_Order type missing</fullName>
            </value>
            <value>
                <fullName>Order_Opportunity missing</fullName>
            </value>
            <value>
                <fullName>Order_Financial Hold</fullName>
            </value>
            <value>
                <fullName>Quote_Packing List Missing</fullName>
            </value>
            <value>
                <fullName>Order_Awaiting Credit notes approval</fullName>
            </value>
            <value>
                <fullName>QR cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting product return info</fullName>
            </value>
            <value>
                <fullName>Order_Clarification Bill &amp; Ship to Address</fullName>
            </value>
            <value>
                <fullName>Order_Manufacturing Hold</fullName>
            </value>
            <value>
                <fullName>Order_Clarification Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>