force-app/main/default/objects/Quote_and_Order_Request__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>To be filled by Account Managers/Requestors</inlineHelpText>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>