force-app/main/default/objects/Quote_and_Order_Request__c/fields/Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Code__c</fullName>
    <formula>Sales_Rep__r.EmployeeNumber</formula>
    <label>Sales Rep Code</label>
    <type>Text</type>
</CustomField>