force-app/main/default/objects/Quote_and_Order_Request__c/fields/Sent_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sent_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent For Approval</label>
    <type>Checkbox</type>
</CustomField>