force-app/main/default/objects/Quote_and_Order_Request__c/fields/Special_Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Instruction__c</fullName>
    <label>Special Delivery Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>