force-app/main/default/objects/Quote_and_Order_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote Request In Progress</fullName>
                <default>true</default>
                <label>Quote Request In Progress</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Quote Request Submitted</fullName>
            </value>
            <value>
                <fullName>Quotation In Progress</fullName>
            </value>
            <value>
                <fullName>Quote Request Missing Information</fullName>
            </value>
            <value>
                <fullName>Quote Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Customer  Approved</fullName>
                <label>Quote Lost</label>
            </value>
            <value>
                <fullName>Order Received</fullName>
            </value>
            <value>
                <fullName>Order Request in Progress</fullName>
            </value>
            <value>
                <fullName>Order Request Submitted</fullName>
            </value>
            <value>
                <fullName>Order In Progress</fullName>
            </value>
            <value>
                <fullName>Order Request Missing Information</fullName>
            </value>
            <value>
                <fullName>Order Completed and OC missing</fullName>
            </value>
            <value>
                <fullName>Order Completed and Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>