force-app/main/default/objects/Quote_and_Order_Request__c/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <label>Tender#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>