force-app/main/default/objects/Quote_and_Order_Request__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>