force-app/main/default/objects/Quote_and_Order_Request__c/fields/VAT_code__c.field-meta.xml
<CustomField>
    <fullName>VAT_code__c</fullName>
    <label>VAT code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>