force-app/main/default/objects/Quote_and_Order_Request__c/recordTypes/Order_Only.recordType-meta.xml
<RecordType>
    <fullName>Order_Only</fullName>
    <active>true</active>
    <description>Create only Order requests</description>
    <label>Order Only</label>
</RecordType>