force-app/main/default/objects/Quote_and_Order_Request__c/recordTypes/Quote_Order.recordType-meta.xml
<RecordType>
    <fullName>Quote_Order</fullName>
    <active>true</active>
    <description>Create Quote and Order requests</description>
    <label>Quote &amp; Order</label>
</RecordType>