force-app/main/default/objects/Quote_and_Order_Request__c/validationRules/Account_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Opportunity__c), ISBLANK( Account__c ))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Please select either an Account or an Opportunity to proceed.</errorMessage>
</ValidationRule>