force-app/main/default/objects/Quote_and_Order_Request__c/validationRules/Check_for_Submit_For_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Submit_For_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Sent_For_Approval__c=false,

OR(
ISPICKVAL(Status__c ,&apos;Pending Approval&apos;),
ISPICKVAL(Status__c ,&apos;Approved&apos;)
),
$RecordType.DeveloperName = &apos;Quote_Order&apos;
)</errorConditionFormula>
    <errorMessage>For approval, please click on the &quot;Submit for Approval&quot; button to proceed</errorMessage>
</ValidationRule>