force-app/main/default/objects/Quote_and_Order_Request__c/validationRules/Product_Type_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Type_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Product_Type__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Product_Type__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>