force-app/main/default/objects/Quote_and_Order_Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>Country__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>