force-app/main/default/objects/Quote_and_Order_Request__c/listViews/GSS_HR_EM_ECR_Order_Coordination_Open.listView-meta.xml
<ListView>
    <fullName>GSS_HR_EM_ECR_Order_Coordination_Open</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Order Completed and Received</value>
    </filters>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>GSS</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Gulf,India Subcontinent,&quot;Levant, Turkey, Africa&quot;,Southern Africa,Saudi Arabia,&quot;Eastern Europe, CIS&quot;,Israel</value>
    </filters>
    <label>GSS HR_EM ECR Order Coordination Open</label>
    <queue>INT_FR_Order_Coordination</queue>
</ListView>