force-app/main/default/objects/Quote_and_Order_Request__c/listViews/HR_UK_Order_Coordination_Open.listView-meta.xml
<ListView>
    <fullName>HR_UK_Order_Coordination_Open</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Quote Request In Progress,Pending Approval,Approved,Quote Request Submitted,Quotation In Progress,Quote Request Missing Information,Quote Sent to Customer,Customer  Approved,Order Completed and Received</value>
    </filters>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>PSS HILLROM,PSS LIKO,GSS,FLC</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>PSS HR_UK Order Coordination Open</label>
    <queue>INT_FR_Order_Coordination</queue>
</ListView>